--- a/.github/workflows/daily_paper_bot.yml
+++ b/.github/workflows/daily_paper_bot.yml
@@ -1,1 +1,32 @@
+name: Daily AI Paper Digest
 
+on:
+  schedule:
+    # 每天 UTC 时间 00:00 运行（对应北京时间早上 08:00）
+    - cron: '0 0 * * *'
+  # 允许手动点击按钮触发，方便测试
+  workflow_dispatch:
+
+jobs:
+  build-and-run:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Check out repository code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run paper summarizer
+      env:
+        # 这里从 GitHub Secrets 读取你的 API Key
+        GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+      run: python main.py
